added vWAN Hub creation

--- a/Network/vWAN/vWANLab.ipynb
+++ b/Network/vWAN/vWANLab.ipynb
@@ -84,10 +84,98 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[93mWARNING: Breaking changes in the cmdlet 'New-AzVirtualNetworkSubnetConfig' :\u001b[0m\n",
+      "\u001b[93mWARNING:  - Update Property Name\n",
+      "\n",
+      "\u001b[0m\n",
+      "\u001b[93mWARNING: Cmdlet invocation changes :\n",
+      "\tOld Way : -ResourceId\n",
+      "\tNew Way : -NatGatewayId\u001b[0m\n",
+      "\u001b[93mWARNING:  - Update Property Name\n",
+      "\n",
+      "\u001b[0m\n",
+      "\u001b[93mWARNING: Cmdlet invocation changes :\n",
+      "\tOld Way : -InputObject\n",
+      "\tNew Way : -NatGateway\u001b[0m\n",
+      "\u001b[93mWARNING: NOTE : Go to https://aka.ms/azps-changewarnings for steps to suppress this breaking change warning, and other information on breaking changes in Azure PowerShell.\u001b[0m\n",
+      "\u001b[93mWARNING: Breaking changes in the cmdlet 'New-AzVirtualNetworkSubnetConfig' :\u001b[0m\n",
+      "\u001b[93mWARNING:  - Update Property Name\n",
+      "\n",
+      "\u001b[0m\n",
+      "\u001b[93mWARNING: Cmdlet invocation changes :\n",
+      "\tOld Way : -ResourceId\n",
+      "\tNew Way : -NatGatewayId\u001b[0m\n",
+      "\u001b[93mWARNING:  - Update Property Name\n",
+      "\n",
+      "\u001b[0m\n",
+      "\u001b[93mWARNING: Cmdlet invocation changes :\n",
+      "\tOld Way : -InputObject\n",
+      "\tNew Way : -NatGateway\u001b[0m\n",
+      "\u001b[93mWARNING: NOTE : Go to https://aka.ms/azps-changewarnings for steps to suppress this breaking change warning, and other information on breaking changes in Azure PowerShell.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "$remoteVirtualNetworksubnet1 = New-AzVirtualNetworkSubnetConfig `\n",
+    "    -Name 'Apps' `\n",
+    "    -AddressPrefix $remoteVirtualNetwork1addprefix\n",
+    "\n",
+    "$remoteVirtualNetwork1 = New-AzVirtualNetwork `\n",
+    "    -ResourceGroupName $rgName `\n",
+    "    -Name $remoteVirtualNetwork1Name `\n",
+    "    -Location $rglocation `\n",
+    "    -AddressPrefix $remoteVirtualNetwork1addprefix `\n",
+    "    -Subnet $remoteVirtualNetworksubnet1\n",
+    "\n",
+    "$remoteVirtualNetworksubnet2 = New-AzVirtualNetworkSubnetConfig `\n",
+    "    -Name 'Apps' `\n",
+    "    -AddressPrefix $remoteVirtualNetwork2addprefix\n",
+    "\n",
+    "$remoteVirtualNetwork2 = New-AzVirtualNetwork `\n",
+    "    -ResourceGroupName $rgName `\n",
+    "    -Name $remoteVirtualNetwork2Name `\n",
+    "    -Location $virtualhub2location `\n",
+    "    -AddressPrefix $remoteVirtualNetwork2addprefix `\n",
+    "    -Subnet $remoteVirtualNetworksubnet2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Virtual WAN Hubs, one in Singapore and one in Sydney"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "$createdVirtualWan = New-AzVirtualWan -ResourceGroupName $rgName `\n",
+    "    -Name $virtualWanName `\n",
+    "    -Location $rglocation `\n",
+    "    -AllowVnetToVnetTraffic `\n",
+    "    -AllowBranchToBranchTraffic\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "$virtualWan = Get-AzVirtualWan `\n",
+    "    -ResourceGroupName $rgName `\n",
+    "    -Name $virtualWanName"
+   ]
   }
  ],
  "metadata": {
