added creating child hubs

--- a/Network/vWAN/vWANLab.ipynb
+++ b/Network/vWAN/vWANLab.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,6 +176,41 @@
     "    -ResourceGroupName $rgName `\n",
     "    -Name $virtualWanName"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Virtual WAN Hub in Sydney "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "$createdVirtualHub = New-AzVirtualHub `\n",
+    "    -ResourceGroupName $rgName `\n",
+    "    -Name $virtualHub1Name `\n",
+    "    -Location $rglocation `\n",
+    "    -AddressPrefix $virtualhub1addprefix `\n",
+    "    -VirtualWan $virtualWan -AsJob\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Virtual WAN Hub in Singapore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
