--- a/Network/vWAN/vWANLab.ipynb
+++ b/Network/vWAN/vWANLab.ipynb
@@ -207,9 +207,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "$createdVirtualHub = New-AzVirtualHub `\n",
+    "    -ResourceGroupName $rgName `\n",
+    "    -Name $virtualHub2Name `\n",
+    "    -Location $virtualhub2location `\n",
+    "    -AddressPrefix $virtualhub2addprefix `\n",
+    "    -VirtualWan $virtualWan -AsJob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Id     Name            PSJobTypeName   State         HasMoreData     Location             Command\n",
+      "--     ----            -------------   -----         -----------     --------             -------\n",
+      "1      Long Running O… AzureLongRunni… Running       True            localhost            New-AzVi…\n",
+      "2      Long Running O… AzureLongRunni… Running       True            localhost            New-AzVi…\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "get-job"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create VM in Sydney "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Id     Name            PSJobTypeName   State         HasMoreData     Location             Command\n",
+      "--     ----            -------------   -----         -----------     --------             -------\n",
+      "3      Long Running O… AzureLongRunni… Running       True            localhost            New-AzVM\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "New-AzVm `\n",
+    "    -ResourceGroupName $rgName `\n",
+    "    -Name $vm1Name `\n",
+    "    -Location $rglocation `\n",
+    "    -VirtualNetworkName $remoteVirtualNetwork1Name `\n",
+    "    -SubnetName \"Apps\" `\n",
+    "    -SecurityGroupName $nsg1name `\n",
+    "    -PublicIpAddressName $pip1name `\n",
+    "    -Size \"Standard_B2ms\" `\n",
+    "    -Image \"UbuntuLTS\" `\n",
+    "    -OpenPorts 22 `\n",
+    "    -Credential $Credential `\n",
+    "    -AsJob"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create VM in Singapore"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
