--- a/Network/vWAN/vWANLab.ipynb
+++ b/Network/vWAN/vWANLab.ipynb
@@ -289,8 +289,43 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Id     Name            PSJobTypeName   State         HasMoreData     Location             Command\n",
+      "--     ----            -------------   -----         -----------     --------             -------\n",
+      "4      Long Running O… AzureLongRunni… Running       True            localhost            New-AzVM\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "New-AzVm `\n",
+    "    -ResourceGroupName $rgName `\n",
+    "    -Name $vm2Name `\n",
+    "    -Location $virtualhub2location `\n",
+    "    -VirtualNetworkName $remoteVirtualNetwork2Name `\n",
+    "    -SubnetName \"Apps\" `\n",
+    "    -SecurityGroupName $nsg2name `\n",
+    "    -PublicIpAddressName $pip2name `\n",
+    "    -Size \"Standard_B2ms\" `\n",
+    "    -Image \"UbuntuLTS\" `\n",
+    "    -OpenPorts 22 `\n",
+    "    -Credential $Credential `\n",
+    "    -AsJob\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
