--- a/Network/vWAN/vWANLab.ipynb
+++ b/Network/vWAN/vWANLab.ipynb
@@ -326,7 +326,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Create VNET Connection with Virtual WAN H"
+   ]
   }
  ],
  "metadata": {
