added VNET connection 02

--- a/Network/vWAN/vWANLab.ipynb
+++ b/Network/vWAN/vWANLab.ipynb
@@ -322,13 +322,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create VNET Connection with Virtual WAN Hub "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "$createdHubVnetConnection1 = New-AzVirtualHubVnetConnection `\n",
+    "    -ResourceGroupName $rgName `\n",
+    "    -VirtualHubName $virtualHub1Name `\n",
+    "    -Name $hubVnetConnection1Name `\n",
+    "    -RemoteVirtualNetwork $remoteVirtualNetwork1 `\n",
+    "    -AsJob"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create VNET Connection with Virtual WAN Hub "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "$createdHubVnetConnection2 = New-AzVirtualHubVnetConnection `\n",
+    "    -ResourceGroupName $rgName `\n",
+    "    -VirtualHubName $virtualHub2Name `\n",
+    "    -Name $hubVnetConnection2Name `\n",
+    "    -RemoteVirtualNetwork $remoteVirtualNetwork2 `\n",
+    "    -AsJob"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "### Create VNET Connection with Virtual WAN H"
-   ]
+   "source": []
   }
  ],
  "metadata": {
