--- a/Network/vWAN/vWANLab.ipynb
+++ b/Network/vWAN/vWANLab.ipynb
@@ -11,7 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### First Step is to declare variables"
+    "### Variables used in this Lab Environment.\n",
+    "**Change envprefix and vmprefix**"
    ]
   },
   {
@@ -54,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Next step is to create a resource group"
+    "### Create a resource group"
    ]
   },
   {
