added clean-up info

--- a/Network/vWAN/vWANLab.ipynb
+++ b/Network/vWAN/vWANLab.ipynb
@@ -407,6 +407,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleanup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -425,7 +432,7 @@
    "mimetype": "text/x-powershell",
    "name": "PowerShell",
    "pygments_lexer": "powershell",
-   "version": "7.0"
+   "version": "3.8.3-final"
   }
  },
  "nbformat": 4,
