added state check

--- a/Network/vWAN/vWANLab.ipynb
+++ b/Network/vWAN/vWANLab.ipynb
@@ -418,6 +418,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "get-job"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
