updated with cleanup script

--- a/Network/vWAN/vWANLab.ipynb
+++ b/Network/vWAN/vWANLab.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,10 +45,20 @@
     "$hubVnetConnection2Name = 'Hub2Connection'\n",
     "$vpnGateway1Name = $envprefix+'vpn1'\n",
     "$vpnGateway2Name = $envprefix+'vpn2'\n",
+    "$vpnSiteName = $envprefix+'-vpnsite'\n",
+    "$vpnSiteLink1Name = $envprefix+'-link1'\n",
+    "$vpnSiteLink2Name = $envprefix+'-link2'\n",
+    "$vpnSiteAddressSpaces = New-Object string[] 1\n",
+    "$vpnSiteAddressSpaces[0] = \"192.168.2.0/24\"\n",
+    "$vpnSite2AddressSpaces = New-Object string[] 2\n",
+    "$vpnSite2AddressSpaces[0] = \"192.169.2.0/24\"\n",
+    "$vpnSite2AddressSpaces[1] = \"192.169.3.0/24\"\n",
+    "$vpnConnectionName = $envprefix+'-con1'\n",
     "$VMLocalAdminUser = (Get-AzKeyVaultSecret -vaultName \"USAZE-MSFTINT-PRD-KVLT01\" -name \"username\").SecretValueText\n",
     "$VMLocalAdminSecurePassword = ConvertTo-SecureString (Get-AzKeyVaultSecret -vaultName \"USAZE-MSFTINT-PRD-KVLT01\" `\n",
     "                                 -name \"password\").SecretValueText -AsPlainText -Force\n",
-    "$Credential = New-Object System.Management.Automation.PSCredential ($VMLocalAdminUser, $VMLocalAdminSecurePassword)\n"
+    "$Credential = New-Object System.Management.Automation.PSCredential ($VMLocalAdminUser, $VMLocalAdminSecurePassword)\n",
+    "\n"
    ]
   },
   {
@@ -410,7 +420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cleanup"
+    "### Create VPN "
    ]
   },
   {
@@ -419,8 +429,102 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get-job"
+    "$createdVpnSite = New-AzVpnSite `\n",
+    "    -ResourceGroupName $rgName `\n",
+    "    -Name $vpnSiteName `\n",
+    "    -Location $rglocation `\n",
+    "    -VirtualWan $virtualWan `\n",
+    "    -IpAddress \"1.2.3.4\" `\n",
+    "    -AddressSpace $vpnSiteAddressSpaces `\n",
+    "    -DeviceModel \"SomeDevice\" `\n",
+    "    -DeviceVendor \"SomeDeviceVendor\" `\n",
+    "    -LinkSpeedInMbps 10\n",
+    "    -AsJob"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create VPN Site"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "$createdVpnSite = New-AzVpnSite `\n",
+    "    -ResourceGroupName $rgName `\n",
+    "    -Name $vpnSiteName `\n",
+    "    -Location $rglocation `\n",
+    "    -VirtualWan $virtualWan `\n",
+    "    -IpAddress \"1.2.3.4\" `\n",
+    "    -AddressSpace $vpnSiteAddressSpaces `\n",
+    "    -DeviceModel \"SomeDevice\" `\n",
+    "    -DeviceVendor \"SomeDeviceVendor\" `\n",
+    "    -LinkSpeedInMbps 10\n",
+    "    -AsJob"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create VPN Connection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "$createdVpnConnection = New-AzVpnConnection `\n",
+    "    -ResourceGroupName $rgName `\n",
+    "    -ParentResourceName $vpnGateway1Name `\n",
+    "    -Name $vpnConnectionName `\n",
+    "    -VpnSite $vpnSite `\n",
+    "    -ConnectionBandwidth 20 `\n",
+    "    -UseLocalAzureIpAddress \n",
+    "    -AsJob"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleanup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Id     Name            PSJobTypeName   State         HasMoreData     Location             Command\n",
+      "--     ----            -------------   -----         -----------     --------             -------\n",
+      "1      Long Running O… AzureLongRunni… Running       True            localhost            Remove-A…\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "Remove-AzResourceGroup -Name $rgname -force -asjob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -441,7 +545,7 @@
    "mimetype": "text/x-powershell",
    "name": "PowerShell",
    "pygments_lexer": "powershell",
-   "version": "3.8.3-final"
+   "version": "7.0"
   }
  },
  "nbformat": 4,
