added storage account creation

--- a/PrivateLink/PrivateLink.ipynb
+++ b/PrivateLink/PrivateLink.ipynb
@@ -10,12 +10,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Planning and Architecture - Placeholder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Variables\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "$envprefix = 'ntvstg1'\n",
+    "$rgName = 'rg'+$envprefix\n",
+    "$rglocation = 'australiaeast'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Resource Group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ResourceGroupName : rgntvstg1\n",
+      "Location          : australiaeast\n",
+      "ProvisioningState : Succeeded\n",
+      "Tags              : \n",
+      "ResourceId        : /subscriptions/51d06b2f-9c98-4502-9329-1ec41fed64c7/resourceGroups/rgntvstg1\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "New-AzResourceGroup -Name $rgName -Location $rglocation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Storage Account"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Planning and Architecture - P"
+    "New-AzStorageAccount -ResourceGroupName $rgName `\n",
+    "  -Name <account-name> `\n",
+    "  -Location $rglocation `\n",
+    "  -SkuName Standard_lrs `\n",
+    "  -Kind StorageV2"
    ]
   }
  ],
