added creating corevnet

--- a/Network/CoreNetworking.ipynb
+++ b/Network/CoreNetworking.ipynb
@@ -11,38 +11,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "$envprefix = 'ntnet11'\n",
+    "$rgName = 'rg'+$envprefix\n",
+    "$rglocation = 'australiaeast'\n",
+    "$remoteVirtualNetwork1Name = $envprefix+'vnet1'\n",
+    "$remoteVirtualNetwork1addprefix = '10.0.0.0/16'\n",
+    "$remoteVirtualSubnet1addprefix = '10.0.0.0/24'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Register Cisco CSR Marketplace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Publisher         : cisco\n",
-      "Product           : cisco-csr-1000v\n",
-      "Plan              : 17_2_1-byol\n",
-      "LicenseTextLink   : https://storelegalterms.blob.core.windows.net/legalterms/3E5ED_legalterms_CISCO\n",
-      "                    %253a24CISCO%253a2DCSR%253a2D1000V%253a2417%253a5F2%253a5F1%253a2DBYOL%253a2477\n",
-      "                    U6PNHCGQDDCTQQH4O5ORD4JNNMDI4KUNCXIWWEOQNAAWCLDHMSJ5TLU3M3P4OSOTTPRU2XUSYWPQJ3Y\n",
-      "                    Q5BIQKGDSJSI5AQTNYK55Q.txt\n",
-      "PrivacyPolicyLink : http://www.cisco.com/web/siteassets/legal/privacy.html\n",
-      "Signature         : ZBLXFFF5BLZPTFKBD545TKNRZXVQIMGONUXA6RFG5LYJ6TJ5HDU7BCD2MGDIYJHA3URT3QNTRYDBJJF\n",
-      "                    SCUB4S4QP4GV2T2J6BIUIN3A\n",
-      "Accepted          : True\n",
-      "Signdate          : 19/07/2020 7:12:18 AM\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "Get-AzMarketplaceTerms -Publisher \"Cisco\" -Product \"cisco-csr-1000v\" -Name \"17_2_1-byol\" | Set-AzMarketplaceTerms -Accept"
    ]
@@ -51,7 +48,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create Resource Group, VNET and Subnets b"
+    "#### Create Resource Group, VNET and Subnets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "$resourceGroup = New-AzResourceGroup -Name $rgName -Location $rglocation\n",
+    "$remoteVirtualNetworksubnet1 = New-AzVirtualNetworkSubnetConfig `\n",
+    "    -Name 'GatewaySubnet' `\n",
+    "    -AddressPrefix $remoteVirtualNetwork1addprefix\n",
+    "\n",
+    "$remoteVirtualNetwork1 = New-AzVirtualNetwork `\n",
+    "    -ResourceGroupName $rgName `\n",
+    "    -Name $remoteVirtualNetwork1Name `\n",
+    "    -Location $rglocation `\n",
+    "    -AddressPrefix $remoteVirtualNetwork1addprefix `\n",
+    "    -Subnet $remoteVirtualNetworksubnet1\n"
    ]
   }
  ],
